--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* CaseCard-classes */
+.Case {
+   box-shadow: 5px 5px 5px rgb(230, 230, 230);
+   border-radius: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Case-Link {
+   text-decoration: none;
+   color: #000;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Case .card-body {
+   outline: transparent;
+   border: transparent;
 }
-
-.App-link {
-  color: #61dafb;
+.Case .card-body:hover {
+   border-radius: 6px;
+   outline: 2px solid rgb(146, 145, 145);
+   transition: 150ms ease-in-out;
+   color: rgb(45, 45, 45);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Case .card-body:active {
+  outline: 2px solid #000;
 }
+.Single-Case textarea {
+   resize: none;
+   font-size: .9rem;
+   min-height: 100px;
+}
+/* CaseCard-classes */
